--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -12,7 +12,7 @@ development:
   database: googlepoint_development
   pool: 5
   username: root
-  password:
+  password: root
   socket: /opt/local/var/run/mysql5/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -25,7 +25,7 @@ test:
   database: googlepoint_test
   pool: 5
   username: root
-  password:
+  password: root
   socket: /opt/local/var/run/mysql5/mysqld.sock
 
 production:
