Added twitter support

--- a/config/providers.yml.example
+++ b/config/providers.yml.example
@@ -9,6 +9,10 @@
       key:
       secret:
       scope:
+    twitter:
+      key:
+      secret:
+      scope:
   # Development settings
   development:
   # Staging settings
