Added tumblr bitches

--- a/config/providers.yml.example
+++ b/config/providers.yml.example
@@ -13,6 +13,10 @@
       key: KEY
       secret: SECRET
       scope:
+    tumblr:
+      key: KEY
+      secret: SECRET
+      scope:
   # Development settings
   development:
   # Staging settings
