Added scopes for facebook, must have publish_stream and offline_access

--- a/config/providers.yml.example
+++ b/config/providers.yml.example
@@ -8,7 +8,7 @@
     facebook:
       key: KEY
       secret: SECRET
-      scope:
+      scope: 'publish_stream, offline_access'
     twitter:
       key: KEY
       secret: SECRET
